# gate

./: .gitignore  AGENTS.md  README.ja.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.claude/: settings.json  settings.json.example
.claude/hooks/: notification-idle-prompt.js  pretooluse-gate.js  pretooluse-gate.js.disabled
.claude/hooks.temp/: pretooluse-gate.js
.github/: copilot-review.yml
.github/workflows/: ci.yml  copilot-review-to-claude.yml  gemini-autofix.yml
apps/adapter-claude/: .env.example  README.ja.md  README.md  claude-wrapper.sh  config.json  package.json
apps/adapter-claude-legacy/: .env.example  .eslintrc.json  README.md  package.json  tsconfig.json
apps/adapter-claude-legacy/src/: index.ts
apps/adapter-claude/src/: broker-client.ts  config.ts  detection.ts  index.ts  process-manager.ts  pty-manager.ts
apps/broker/: .env.example  README.md  package.json
apps/broker/src/: always-allow-rules.ts  auth.ts  index.ts  pairing-codes.ts  pending-requests.ts  types.ts  websocket.ts
apps/ios-client/: CLAUDE.md  README.ja.md  README.md
apps/ios-client/Config/: Gate.entitlements  Shared.xcconfig  Tests.xcconfig
apps/ios-client/Gate/: Gate.xctestplan  GateApp.swift
apps/ios-client/Gate.xcodeproj/: project.pbxproj
apps/ios-client/Gate.xcworkspace/: contents.xcworkspacedata
apps/web-ui/: .env.local.example  package.json
apps/web-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/web-ui/src-tauri/src/: main.rs
docs/: automation.md
scripts/: setup-adapter.sh
tools/codex/: README.md  codex-notify.js
(+44 files in other folders)
